@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+utils/mapper.c: add a world map of used and unused exits / blocking zones / roads.
+Nicolas Weeger 2007-05-28
+
 common/button.c: calming mood floors should calm attacking monsters.
 Nicolas Weeger 2007-05-27
 
